Fixed an uninitialized value picked up by valgrind (this was the cause of wierd behaviour from r563). Also marked two memory leaks due to temporary initialization code.
git-svn-id: https://openmalaria.googlecode.com/svn@589 aa1ca794-fd11-11dd-ac65-f74f249cfaac

--- a/trunk/.gitignore
+++ b/trunk/.gitignore
@@ -11,5 +11,6 @@ util/CaseManagementTree/*.class
 util/CaseManagementTree/CaseManagementTree
 .sconsign.dblite
 build
+rel-build
 lib
 test/compareOutputsFloat.pyc
