DrugType refactoring and preparation
git-svn-id: https://openmalaria.googlecode.com/svn@590 aa1ca794-fd11-11dd-ac65-f74f249cfaac

--- a/trunk/model/CMakeLists.txt
+++ b/trunk/model/CMakeLists.txt
@@ -28,7 +28,9 @@ set (Model_CPP
   PkPd/Drug/Drug.cpp
   PkPd/Drug/DrugType.cpp
   PkPd/Drug/HoshenDrug.cpp
+  PkPd/Drug/HoshenDrugType.cpp
   PkPd/Drug/IhKwDrug.cpp
+  PkPd/Drug/IhKwDrugType.cpp
   
   Transmission/TransmissionModel.cpp
   Transmission/NonVector.cpp
