Moved per-human files not already in sub-dirs into Host/
git-svn-id: https://openmalaria.googlecode.com/svn@592 aa1ca794-fd11-11dd-ac65-f74f249cfaac

--- a/trunk/model/CMakeLists.txt
+++ b/trunk/model/CMakeLists.txt
@@ -4,12 +4,20 @@
 
 # Don't use aux_source_directory on . because we don't want to compile openMalaria.cpp in to the lib.
 set (Model_CPP
-  population.cpp InfectionIncidenceModel.cpp
-  gzstream.C Simulation.cpp Surveys.cpp Survey.cpp Global.cpp
-  intervention.cpp proteome.cpp Human.cpp
-  inputData.cpp NeonatalMortality.cpp
-  
+  Simulation.cpp
+  Global.cpp
+  population.cpp
+  inputData.cpp
+  Surveys.cpp
+  Survey.cpp
+  gzstream.C
   ${CMAKE_CURRENT_BINARY_DIR}/scenario.cxx
+  
+  Host/Human.cpp
+  Host/InfectionIncidenceModel.cpp
+  Host/NeonatalMortality.cpp
+  Host/intervention.cpp
+  Host/proteome.cpp
   
   Clinical/ClinicalModel.cpp
   Clinical/EventScheduler.cpp
