Start of a continuous interventions scheduler. Currently reads parameters but doesn't do anything.
git-svn-id: https://openmalaria.googlecode.com/svn@594 aa1ca794-fd11-11dd-ac65-f74f249cfaac

--- a/trunk/model/CMakeLists.txt
+++ b/trunk/model/CMakeLists.txt
@@ -16,6 +16,7 @@ set (Model_CPP
   Host/Human.cpp
   Host/InfectionIncidenceModel.cpp
   Host/NeonatalMortality.cpp
+  Host/ContinuousInterventions.cpp
   Host/intervention.cpp
   Host/proteome.cpp
   
