Mega checkpointing rewrite (status: compiles and passes all tests without checkpointing, but not with). Still to do: proteome and PkPd, static members (possibly).
git-svn-id: https://openmalaria.googlecode.com/svn@604 aa1ca794-fd11-11dd-ac65-f74f249cfaac

--- a/trunk/model/CMakeLists.txt
+++ b/trunk/model/CMakeLists.txt
@@ -64,6 +64,8 @@ set (Model_CPP
   util/gsl.cpp
   util/vectors.cpp
   util/WeibullDecayedValue.cpp
+  util/errors.cpp
+  util/checkpoint.cpp
 )
 
 # Headers - only included so they show up in IDEs:
