--- a/trunk/test/CMakeLists.txt
+++ b/trunk/test/CMakeLists.txt
@@ -9,9 +9,9 @@ set (OM_BOXTEST_SCHEMA_NAME ${OM_LATEST_SCHEMA})
 configure_file (${CMAKE_CURRENT_SOURCE_DIR}/run.py ${CMAKE_CURRENT_BINARY_DIR}/run.py @ONLY)
 
 # working tests (with checkpointing):
-set (OM_BOXTEST_NAMES 1 2 3 4 5 6 9 11 12 IPT)
+set (OM_BOXTEST_NAMES 1 2 3 4 5 6 9 11 12 IPT VecTest VecConstEIR)
 # tests with broken checkpointing:
-set (OM_BOXTEST_NC_NAMES VecTest VecConstEIR)
+set (OM_BOXTEST_NC_NAMES)
 # Disabled due to "in-progress" work: CevCq DummyPKPD
 # Use python script. There is also a shell-script, but it still uses python to validate results.
 if (PYTHON_EXECUTABLE)
