Added Molineaux model (still need some tests our side), adapted to 1-day timestep
git-svn-id: https://openmalaria.googlecode.com/svn@856 aa1ca794-fd11-11dd-ac65-f74f249cfaac

--- a/trunk/model/CMakeLists.txt
+++ b/trunk/model/CMakeLists.txt
@@ -62,6 +62,7 @@ set (Model_CPP
   WithinHost/DescriptiveIPTInfection.cpp
   WithinHost/DummyInfection.cpp
   WithinHost/EmpiricalInfection.cpp
+  WithinHost/MolineauxInfection.cpp
   
   util/BoincWrapper.cpp
   util/timer.cpp
