Fixed win build (std::pair replaced with boost::tuple) Fixed compiler warnings
git-svn-id: https://openmalaria.googlecode.com/svn@860 aa1ca794-fd11-11dd-ac65-f74f249cfaac

--- a/trunk/unittest/CMakeLists.txt
+++ b/trunk/unittest/CMakeLists.txt
@@ -63,7 +63,7 @@ include_directories (
   ${CMAKE_BINARY_DIR}/xsdcxx
 )
 
-set (OM_CXXTEST_HEADERS
+set (OM_CXXTEST_HEADERS_LIST
   PerHostTransmissionSuite.h
   #VectorAnophelesSuite.h needs updating for vector model changes
   ExtraAsserts.h	# must appear after at least some of the above
@@ -78,11 +78,15 @@ set (OM_CXXTEST_HEADERS
   ESCaseManagementSuite.h
   ESDecisionTreeSuite.h
 )
+set(OM_CXXTEST_HEADERS "")
+foreach(arg ${OM_CXXTEST_HEADERS_LIST})
+  set(OM_CXXTEST_HEADERS "${OM_CXXTEST_HEADERS} ${arg}")
+endforeach(arg ${OM_CXXTEST_HEADERS_LIST})
 
+message(STATUS "${OM_CXXTEST_SCRIPT} ${OM_CXXTEST_OPTIONS} --runner=ParenPrinter -o ${CMAKE_CURRENT_BINARY_DIR}/tests.cpp ${OM_CXXTEST_HEADERS}")
 if (OM_CXXTEST_INTERPRETER)
   add_custom_command (OUTPUT tests.cpp
-    COMMAND ${OM_CXXTEST_INTERPRETER} ${OM_CXXTEST_SCRIPT} ${OM_CXXTEST_OPTIONS} --runner=ParenPrinter -o ${CMAKE_CURRENT_BINARY_DIR}/tests.cpp
-      ${OM_CXXTEST_HEADERS}
+    COMMAND ${OM_CXXTEST_INTERPRETER} ${OM_CXXTEST_SCRIPT} ${OM_CXXTEST_OPTIONS} --runner=ParenPrinter -o ${CMAKE_CURRENT_BINARY_DIR}/tests.cpp ${OM_CXXTEST_HEADERS}
     DEPENDS ${OM_CXXTEST_HEADERS}
     WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
     COMMENT "Generating unittest code with cxxtestgen"
