--- a/trunk/test/CMakeLists.txt
+++ b/trunk/test/CMakeLists.txt
@@ -11,7 +11,7 @@ configure_file (${CMAKE_CURRENT_SOURCE_DIR}/run.py ${CMAKE_CURRENT_BINARY_DIR}/r
 # working tests (with checkpointing):
 set (OM_BOXTEST_NAMES 1 2 3 4 5 6 9 11 12 IPT VecTestII VecFullTestII)
 # tests with broken checkpointing:
-set (OM_BOXTEST_NC_NAMES ESCMTest)
+set (OM_BOXTEST_NC_NAMES)
 # Disabled due to "in-progress" work: CevCq DummyPKPD
 # Use python script. There is also a shell-script, but it still uses python to validate results.
 if (PYTHON_EXECUTABLE)
