Moved CFR code into a common base-class of the case-management models since it will be used by both, and changed the code getting a CFR to use an O(ln(n)) algorithm.
git-svn-id: https://openmalaria.googlecode.com/svn@870 aa1ca794-fd11-11dd-ac65-f74f249cfaac

--- a/trunk/model/CMakeLists.txt
+++ b/trunk/model/CMakeLists.txt
@@ -21,6 +21,7 @@ set (Model_CPP
   Host/intervention.cpp
   
   Clinical/ClinicalModel.cpp
+  Clinical/CaseManagementCommon.cpp
   Clinical/EventScheduler.cpp
   Clinical/ESCaseManagement.cpp
   Clinical/ESDecisionTree.cpp
