Replacing vector.txt output with more flexible code. Not yet tested.
git-svn-id: https://openmalaria.googlecode.com/svn@972 aa1ca794-fd11-11dd-ac65-f74f249cfaac

--- a/trunk/model/CMakeLists.txt
+++ b/trunk/model/CMakeLists.txt
@@ -74,6 +74,8 @@ set (Model_CPP
   util/checkpoint.cpp
   util/Options.cpp
   util/random.cpp
+  
+  Output/Continuous.cpp
 )
 
 # Headers - only included so they show up in IDEs:
