Fixed potential linker issue with unittest.
git-svn-id: https://openmalaria.googlecode.com/svn@992 aa1ca794-fd11-11dd-ac65-f74f249cfaac

--- a/trunk/unittest/CMakeLists.txt
+++ b/trunk/unittest/CMakeLists.txt
@@ -105,6 +105,7 @@ configure_file (${CMAKE_SOURCE_DIR}/test/autoRegressionParameters.csv ${CMAKE_CU
 add_executable (run tests.cpp)
 target_link_libraries (run
   model
+  contrib
   ${OM_CXXTEST_GUI_LIB}
   ${GSL_LIBRARIES}
   ${XERCESC_LIBRARIES}
