Implemented a generic continuous (age-specific) intervention deployment system. Results for scenarioIPT updated (just due to random number generator). Vaccine interventions: don't deal with in new generic code due to special deployment rules. Fixed missed checkpointing for AgeGroupData.
git-svn-id: https://openmalaria.googlecode.com/svn@1107 aa1ca794-fd11-11dd-ac65-f74f249cfaac

--- a/trunk/model/CMakeLists.txt
+++ b/trunk/model/CMakeLists.txt
@@ -16,6 +16,7 @@ set (Model_CPP
   Host/InfectionIncidenceModel.cpp
   Host/NeonatalMortality.cpp
   Host/intervention.cpp
+  Host/ContinuousIntervention.cpp
   
   Clinical/ClinicalModel.cpp
   Clinical/CaseManagementCommon.cpp
