Moved cross-population debug stats to another file and added proportion of humans not updated.
git-svn-id: https://openmalaria.googlecode.com/svn@1246 aa1ca794-fd11-11dd-ac65-f74f249cfaac

--- a/trunk/model/CMakeLists.txt
+++ b/trunk/model/CMakeLists.txt
@@ -8,6 +8,7 @@ set (Model_CPP
   Global.cpp
   Population.cpp
   PopulationAgeStructure.cpp
+  PopulationStats.cpp
   inputData.cpp
   AgeGroupData.cpp
   ${CMAKE_CURRENT_BINARY_DIR}/scenario.cxx
