Start of a cohort-mode for surveys; currently only affects a few outputs. No way yet to add individuals to cohort. Checkpointing bug somewhere.
git-svn-id: https://openmalaria.googlecode.com/svn@1271 aa1ca794-fd11-11dd-ac65-f74f249cfaac

--- a/trunk/test/CMakeLists.txt
+++ b/trunk/test/CMakeLists.txt
@@ -22,7 +22,7 @@ set (OM_BOXTEST_NAMES
   Uninfect
 )
 # tests with broken checkpointing:
-set (OM_BOXTEST_NC_NAMES)
+set (OM_BOXTEST_NC_NAMES Cohort)
 # Disabled due to "in-progress" work: (none)
 # Use python script. There is also a shell-script, but it still uses python to validate results.
 if (PYTHON_EXECUTABLE)
