Cleaned up vaccine code a bit.
git-svn-id: https://openmalaria.googlecode.com/svn@1281 aa1ca794-fd11-11dd-ac65-f74f249cfaac

--- a/trunk/model/CMakeLists.txt
+++ b/trunk/model/CMakeLists.txt
@@ -16,7 +16,7 @@ set (Model_CPP
   Host/Human.cpp
   Host/InfectionIncidenceModel.cpp
   Host/NeonatalMortality.cpp
-  Host/intervention.cpp
+  Host/Vaccine.cpp
   Host/ContinuousIntervention.cpp
   
   Clinical/ClinicalModel.cpp
