--- a/tags/openmalaria-646/CMakeLists.txt
+++ b/tags/openmalaria-646/CMakeLists.txt
@@ -180,6 +180,8 @@ target_link_libraries (openMalaria
   ${Z_LIBRARIES}
   ${PTHREAD_LIBRARIES}
   ${BOINC_LIBRARIES}
+  Empirical
+  Cohort
 )
 
 if (MSVC)
