Updated code reading EIR as monthly values according to NC's suggestions. Added a test scenario.
git-svn-id: https://openmalaria.googlecode.com/svn@1362 aa1ca794-fd11-11dd-ac65-f74f249cfaac

--- a/trunk/test/CMakeLists.txt
+++ b/trunk/test/CMakeLists.txt
@@ -21,6 +21,7 @@ set (OM_BOXTEST_NAMES
   Uninfect
   Empirical
   Cohort
+  VecMonthly
 )
 # tests with broken checkpointing:
 set (OM_BOXTEST_NC_NAMES)
