Standardize code a bit: rename .hpp files .h and split Opitons.cpp into two files corresponding to headers.
git-svn-id: https://openmalaria.googlecode.com/svn@1411 aa1ca794-fd11-11dd-ac65-f74f249cfaac

--- a/trunk/model/CMakeLists.txt
+++ b/trunk/model/CMakeLists.txt
@@ -71,7 +71,8 @@ set (Model_CPP
   util/WeibullDecayedValue.cpp
   util/errors.cpp
   util/checkpoint.cpp
-  util/Options.cpp
+  util/ModelOptions.cpp
+  util/CommandLine.cpp
   util/random.cpp
   util/StreamValidator.cpp
   
