Generalized reading of age-group data from XML into a map.
git-svn-id: https://openmalaria.googlecode.com/svn@1412 aa1ca794-fd11-11dd-ac65-f74f249cfaac

--- a/trunk/model/CMakeLists.txt
+++ b/trunk/model/CMakeLists.txt
@@ -74,6 +74,7 @@ set (Model_CPP
   util/ModelOptions.cpp
   util/CommandLine.cpp
   util/random.cpp
+  util/XmlUtils.cpp
   util/StreamValidator.cpp
   
   Monitoring/Continuous.cpp
