Disabled Hoshen drug code to avoid having to maintain this unused code. Started moving age-group weight data into XML (in progress). As of this commit, only the Empirical test passes since more scenario changes are needed.
git-svn-id: https://openmalaria.googlecode.com/svn@1511 aa1ca794-fd11-11dd-ac65-f74f249cfaac

--- a/branches/adult-EIR/model/CMakeLists.txt
+++ b/branches/adult-EIR/model/CMakeLists.txt
@@ -36,13 +36,13 @@ set (Model_CPP
   Pathogenesis/Predet.cpp
   
   PkPd/PkPdModel.cpp
-  PkPd/HoshenPkPdModel.cpp
+  #PkPd/HoshenPkPdModel.cpp
   PkPd/LSTMPkPdModel.cpp
-  PkPd/Drug/HoshenDrug.cpp
-  PkPd/Drug/HoshenDrugType.cpp
+  #PkPd/Drug/HoshenDrug.cpp
+  #PkPd/Drug/HoshenDrugType.cpp
   PkPd/Drug/LSTMDrug.cpp
   PkPd/Drug/LSTMDrugType.cpp
-  PkPd/Proteome.cpp
+  #PkPd/Proteome.cpp
   
   Transmission/TransmissionModel.cpp
   Transmission/NonVector.cpp
