--- a/branches/adult-EIR/unittest/CMakeLists.txt
+++ b/branches/adult-EIR/unittest/CMakeLists.txt
@@ -69,7 +69,7 @@ set (OM_CXXTEST_HEADERS
   PerHostTransmissionSuite.h
   #VectorAnophelesSuite.h needs updating for vector model changes
   ExtraAsserts.h	# must appear after at least some of the above
-  HoshenPkPdSuite.h
+  #HoshenPkPdSuite.h
   LSTMPkPdSuite.h
   CheckpointSuite.h
   DummyInfectionSuite.h
