Updated case fatality rates and p(sequelae) for inpatients to use AgeGroupInterpolation class (sequelae now uses interpolation, CFR equivalent to previous code). Added new human element to all test scenarios. All pass with old results; change in sequelae presumably too small to have an impact or values constant (no effective change).
git-svn-id: https://openmalaria.googlecode.com/svn@1517 aa1ca794-fd11-11dd-ac65-f74f249cfaac

--- a/branches/adult-EIR/model/CMakeLists.txt
+++ b/branches/adult-EIR/model/CMakeLists.txt
@@ -76,6 +76,7 @@ set (Model_CPP
   util/random.cpp
   util/XmlUtils.cpp
   util/StreamValidator.cpp
+  util/AgeGroupInterpolation.cpp
   
   Monitoring/Continuous.cpp
   Monitoring/Surveys.cpp
