Replaced WeibullDecayedValue with more flexible DecayFunction (affects all vector interventions).
git-svn-id: https://openmalaria.googlecode.com/svn@1609 aa1ca794-fd11-11dd-ac65-f74f249cfaac

--- a/trunk/model/CMakeLists.txt
+++ b/trunk/model/CMakeLists.txt
@@ -65,7 +65,7 @@ set (Model_CPP
   util/BoincWrapper.cpp
   util/timer.cpp
   util/vectors.cpp
-  util/WeibullDecayedValue.cpp
+  util/DecayFunction.cpp
   util/errors.cpp
   util/checkpoint.cpp
   util/ModelOptions.cpp
