Refactored some PkPd code to make caching of drug-factor calculations easier.
git-svn-id: https://openmalaria.googlecode.com/svn@1616 aa1ca794-fd11-11dd-ac65-f74f249cfaac

--- a/trunk/model/CMakeLists.txt
+++ b/trunk/model/CMakeLists.txt
@@ -40,6 +40,7 @@ set (Model_CPP
   #PkPd/Drug/HoshenDrugType.cpp
   PkPd/Drug/LSTMDrug.cpp
   PkPd/Drug/LSTMDrugType.cpp
+  PkPd/Drug/LSTMDrugAllele.cpp
   #PkPd/Proteome.cpp
   
   Transmission/TransmissionModel.cpp
