Implementation of Penny infection model. Needs testing.
git-svn-id: https://openmalaria.googlecode.com/svn@1661 aa1ca794-fd11-11dd-ac65-f74f249cfaac

--- a/trunk/model/CMakeLists.txt
+++ b/trunk/model/CMakeLists.txt
@@ -61,6 +61,7 @@ set (Model_CPP
   WithinHost/Infection/DummyInfection.cpp
   WithinHost/Infection/EmpiricalInfection.cpp
   WithinHost/Infection/MolineauxInfection.cpp
+  WithinHost/Infection/PennyInfection.cpp
   
   util/BoincWrapper.cpp
   util/timer.cpp
