Changed output format of prevented infections / skipped updates. NaN check for parasite densities (debug mode only).
git-svn-id: https://openmalaria.googlecode.com/svn@1682 aa1ca794-fd11-11dd-ac65-f74f249cfaac

--- a/trunk/unittest/CMakeLists.txt
+++ b/trunk/unittest/CMakeLists.txt
@@ -79,6 +79,7 @@ set (OM_CXXTEST_HEADERS
   ESDecisionTreeSuite.h
   AgeGroupInterpolationSuite.h
   DecayFunctionSuite.h
+  PennyInfectionSuite.h
 )
 
 #Appears to be problems with this on windows...
