Unittest and black-box test for Penny's infection model. Unittest densities have been checked against those produced by Matlab code.
git-svn-id: https://openmalaria.googlecode.com/svn@1695 aa1ca794-fd11-11dd-ac65-f74f249cfaac

--- a/trunk/test/CMakeLists.txt
+++ b/trunk/test/CMakeLists.txt
@@ -22,6 +22,7 @@ set (OM_BOXTEST_NAMES
   Empirical
   Cohort
   VecMonthly
+  Penny
 )
 # tests with broken checkpointing:
 set (OM_BOXTEST_NC_NAMES)
