Updated parameterization used in Molineaux scenarios. Added 1DayIntervs scenario.
git-svn-id: https://openmalaria.googlecode.com/svn@1748 aa1ca794-fd11-11dd-ac65-f74f249cfaac

--- a/trunk/test/CMakeLists.txt
+++ b/trunk/test/CMakeLists.txt
@@ -23,6 +23,7 @@ set (OM_BOXTEST_NAMES
   VecMonthly
   Penny
   R_0
+  1DayIntervs
 )
 # tests with broken checkpointing:
 set (OM_BOXTEST_NC_NAMES)
