--- a/trunk/schema/CMakeLists.txt
+++ b/trunk/schema/CMakeLists.txt
@@ -2,8 +2,22 @@
 # Copyright © 2005-2011 Swiss Tropical Institute and Liverpool School Of Tropical Medicine
 # Licence: GNU General Public Licence version 2 or later (see COPYING)
 
-
-foreach (XSD_NAME scenario demography)
+set (SCHEMA_NAMES
+  scenario
+  demography
+  monitoring
+  interventions
+  healthSystem
+  entomology
+  pharmacology
+  util
+)
+set (SCHEMA_CPP "")
+set (SCHEMA_H "")
+foreach (XSD_NAME ${SCHEMA_NAMES})
+  list (APPEND SCHEMA_CPP "${XSD_NAME}.cpp")
+  list (APPEND SCHEMA_H "${XSD_NAME}.h")
+  
   set (XSD_FILE ${CMAKE_CURRENT_SOURCE_DIR}/${XSD_NAME}.xsd)
   add_custom_command (
     OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/${XSD_NAME}.cpp ${CMAKE_CURRENT_BINARY_DIR}/${XSD_NAME}.h
@@ -20,6 +34,16 @@ foreach (XSD_NAME scenario demography)
   )
 endforeach (XSD_NAME)
 
+set( INLINED_XSD ${CMAKE_CURRENT_BINARY_DIR}/scenario_current.xsd )
+add_custom_command (OUTPUT ${INLINED_XSD}
+  COMMAND ${PYTHON} ${CMAKE_SOURCE_DIR}/util/inlineSchema.py
+  scenario.xsd ${INLINED_XSD}
+  WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
+  COMMENT "Inlining scenario.xsd and dependencies into ${INLINED_XSD}"
+  VERBATIM
+)
+add_custom_target (inlined_xsd ALL DEPENDS ${INLINED_XSD})
+
 include_directories (SYSTEM
   ${XSD_INCLUDE_DIRS}
   ${XERCESC_INCLUDE_DIRS}
@@ -28,12 +52,6 @@ include_directories (
   ${CMAKE_BINARY_DIR}
 )
 
-set (SCHEMA_CPP
-  ${CMAKE_CURRENT_BINARY_DIR}/scenario.cpp
-  ${CMAKE_CURRENT_BINARY_DIR}/demography.cpp
-)
-# Headers - only included so they show up in IDEs:
-file (GLOB_RECURSE SCHEMA_H "${CMAKE_CURRENT_BINARY_DIR}/*.h")
 add_library (schema
   ${SCHEMA_CPP}
   ${SCHEMA_H}
