In progress: revising interventions section of XML. Scenarios with interventions are currently broken. XSD: changes largely but not entirely done. Simulator: 1/2 done. SchemaTranslator: 1/4 done.
git-svn-id: https://openmalaria.googlecode.com/svn@1822 aa1ca794-fd11-11dd-ac65-f74f249cfaac

--- a/trunk/model/CMakeLists.txt
+++ b/trunk/model/CMakeLists.txt
@@ -9,6 +9,7 @@ set (Model_CPP
   PopulationAgeStructure.cpp
   PopulationStats.cpp
   inputData.cpp
+  Interventions.cpp
   
   Host/Human.cpp
   Host/InfectionIncidenceModel.cpp
