Renamed XSD eir and monthlyEir elements to EIR and monthlyEIR; allowed --set-EIR option to work with monthlyEIR values.
git-svn-id: https://openmalaria.googlecode.com/svn@1827 aa1ca794-fd11-11dd-ac65-f74f249cfaac

--- a/trunk/schema/CMakeLists.txt
+++ b/trunk/schema/CMakeLists.txt
@@ -16,8 +16,8 @@ set (SCHEMA_CPP "")
 set (SCHEMA_H "")
 set (SCHEMA_XSD "")
 foreach (XSD_NAME ${SCHEMA_NAMES})
-  list (APPEND SCHEMA_CPP "${XSD_NAME}.cpp")
-  list (APPEND SCHEMA_H "${XSD_NAME}.h")
+  list (APPEND SCHEMA_CPP "${CMAKE_CURRENT_BINARY_DIR}/${XSD_NAME}.cpp")
+  list (APPEND SCHEMA_H "${CMAKE_CURRENT_BINARY_DIR}/${XSD_NAME}.h")
   list (APPEND SCHEMA_XSD "${XSD_NAME}.xsd")
   
   set (XSD_FILE ${CMAKE_CURRENT_SOURCE_DIR}/${XSD_NAME}.xsd)
