New code for importing infections. All scenarios now pass.
git-svn-id: https://openmalaria.googlecode.com/svn@1833 aa1ca794-fd11-11dd-ac65-f74f249cfaac

--- a/trunk/model/CMakeLists.txt
+++ b/trunk/model/CMakeLists.txt
@@ -15,6 +15,7 @@ set (Model_CPP
   Host/InfectionIncidenceModel.cpp
   Host/NeonatalMortality.cpp
   Host/Vaccine.cpp
+  Host/ImportedInfections.cpp
   
   Clinical/ClinicalModel.cpp
   Clinical/CaseManagementCommon.cpp
