Implemented support for deterministic and stochastic diagnostics in mass drug treatment intervention for 5-day time-step (i.e. MSAT).
git-svn-id: https://openmalaria.googlecode.com/svn@1900 aa1ca794-fd11-11dd-ac65-f74f249cfaac

--- a/trunk/model/CMakeLists.txt
+++ b/trunk/model/CMakeLists.txt
@@ -26,6 +26,7 @@ set (Model_CPP
   Clinical/ImmediateOutcomes.cpp
   Clinical/Episode.cpp
   Clinical/parser.cpp
+  Clinical/Diagnostic.cpp
   
   Pathogenesis/PathogenesisModel.cpp
   Pathogenesis/Mueller.cpp
