CMake build rules for SchemaTranslator.
git-svn-id: https://openmalaria.googlecode.com/svn@2061 aa1ca794-fd11-11dd-ac65-f74f249cfaac

--- a/trunk/CMakeLists.txt
+++ b/trunk/CMakeLists.txt
@@ -184,6 +184,7 @@ endif (OM_STREAM_VALIDATOR)
 add_subdirectory (contrib)
 add_subdirectory (schema)
 add_subdirectory (model)
+add_subdirectory (util/SchemaTranslator)
 add_dependencies (model schema)
 
 # -----  generate openMalaria  -----
