Vector parameters α_i, P_B_i, P_C_i and P_D_i (rate of encountering hosts and probabilities of biting, escaping and resting respectively) may now vary across humans to simulate human heterogeneity. As yet, only tested with variance set to zero.
git-svn-id: https://openmalaria.googlecode.com/svn@2070 aa1ca794-fd11-11dd-ac65-f74f249cfaac

--- a/trunk/model/CMakeLists.txt
+++ b/trunk/model/CMakeLists.txt
@@ -75,6 +75,7 @@ set (Model_CPP
   util/StreamValidator.cpp
   util/AgeGroupInterpolation.cpp
   util/TimeStep.cpp
+  util/sampler.cpp
   
   Monitoring/Continuous.cpp
   Monitoring/Surveys.cpp
