Added extra cts outputs. Moved life-cycle code to a separate module.
git-svn-id: https://openmalaria.googlecode.com/svn@2082 aa1ca794-fd11-11dd-ac65-f74f249cfaac

--- a/branches/vec-lifecycle/model/CMakeLists.txt
+++ b/branches/vec-lifecycle/model/CMakeLists.txt
@@ -50,6 +50,7 @@ set (Model_CPP
   Transmission/Vector/VectorAnopheles.cpp
   Transmission/Vector/AnophelesHumanParams.cpp
   Transmission/Vector/ITN.cpp
+  Transmission/Vector/MosquitoLifeCycle.cpp
   
   WithinHost/WithinHostModel.cpp
   WithinHost/CommonWithinHost.cpp
