Extracted the core transmission model equations into another class (needed for fitting).
git-svn-id: https://openmalaria.googlecode.com/svn@2102 aa1ca794-fd11-11dd-ac65-f74f249cfaac

--- a/branches/vec-lifecycle/model/CMakeLists.txt
+++ b/branches/vec-lifecycle/model/CMakeLists.txt
@@ -51,6 +51,7 @@ set (Model_CPP
   Transmission/Vector/PerHost.cpp
   Transmission/Vector/ITN.cpp
   Transmission/Vector/MosquitoLifeCycle.cpp
+  Transmission/Vector/MosquitoTransmission.cpp
   
   WithinHost/WithinHostModel.cpp
   WithinHost/CommonWithinHost.cpp
