More work setting up vector model resource fitting:
Moved fitting code to ResourceFitter class/files.
Set up simulation loop used by the fitter to receive the inputs it needs and iterate until it converges on a periodic solution.
The root-finding/fitting algorithms still don't work.


git-svn-id: https://openmalaria.googlecode.com/svn@2105 aa1ca794-fd11-11dd-ac65-f74f249cfaac

--- a/branches/vec-lifecycle/model/CMakeLists.txt
+++ b/branches/vec-lifecycle/model/CMakeLists.txt
@@ -52,6 +52,7 @@ set (Model_CPP
   Transmission/Vector/ITN.cpp
   Transmission/Vector/MosquitoLifeCycle.cpp
   Transmission/Vector/MosquitoTransmission.cpp
+  Transmission/Vector/ResourceFitter.cpp
   
   WithinHost/WithinHostModel.cpp
   WithinHost/CommonWithinHost.cpp
