--- a/trunk/.gitignore
+++ b/trunk/.gitignore
@@ -1,8 +1,8 @@
 # I (DH) have been using the repository via git-svn, hence this .gitignore file.
 html
 profiling
-.kdev4
-openmalaria.kdev4
+*.kdev4
+*.pyc
 # These two folders are tracked in svn anyway (git won't track folders).
 util/SchemaTranslator/scenarios
 util/SchemaTranslator/translatedScenarios
@@ -12,4 +12,3 @@ util/SchemaTranslator/*.class
 build
 rel-build
 lib
-test/compareOutputsFloat.pyc
